--- a/core/templates/core/carrito.html
+++ b/core/templates/core/carrito.html
@@ -30,7 +30,7 @@
                         <div class="card border-0 mw-100" style="background-color: inherit;">
                             <div class="row no-gutters">
                                 <div class="col-md-3">
-                                    <img src="{{carrito.image.url}}" class="card-img h-100" alt="...">
+                                    <img src="{{carrito.image.url}}" class="card-img-top" alt="Card image cap">
                                 </div>
                                 <div class="col-md-9">
                                     <div class="card-body">
@@ -88,7 +88,7 @@
             <tbody>
                 <tr>
                     <td scope="row">Subtotal</td>
-                    <td>S/. {{subtotal}}</td>
+                    <td>S/. {{subtotal|floatformat:2}}</td>
 
                 </tr>
                 <tr>
@@ -97,7 +97,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Gran total</th>
-                    <td>S/. {{total}}</td>
+                    <td>S/. {{total|floatformat:2}}</td>
                 </tr>
             </tbody>
         </table>
