--- a/core/templates/core/pago.html
+++ b/core/templates/core/pago.html
@@ -76,7 +76,7 @@
                 <div class="card-body div-disabled activar">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="radioEfectivoPago"
-                            value="option1" checked>
+                            value="Efectivo" checked>
                         <label class="form-check-label d-block" for="radioEfectivoPago">
                             Efectivo
                         </label>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="radioPosVisaPago"
-                            value="option2">
+                            value="POS Inalámbrico Visa">
                         <label class="form-check-label d-block" for="radioPosVisaPago">
                             POS Inalámbrico Visa
                         </label>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="radioPosMasterPago"
-                            value="option2">
+                            value="POS Inalámbrico Mastercard">
                         <label class="form-check-label d-block" for="radioPosMasterPago">
                             POS Inalámbrico Mastercard
                         </label>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="radioAmericanPago"
-                            value="option2">
+                            value="American Express">
                         <label class="form-check-label d-block" for="radioAmericanPago">
                             American Express
                         </label>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="radioVisaPago"
-                            value="option2">
+                            value="Tarjeta Visa">
                         <label class="form-check-label d-block" for="radioVisaPago">
                             Tarjeta Visa
                         </label>
@@ -122,7 +122,7 @@
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="exampleRadios" id="radioMasterPago"
-                            value="option2">
+                            value="Tarjeta Mastercard">
                         <label class="form-check-label d-block" for="radioMasterPago">
                             Tarjeta Mastercard
                         </label>
@@ -130,7 +130,7 @@
                     </div>
                 </div>
                 <div class="card-footer div-disabled text-center activar">
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalTarjeta" id="gg">Continuar</button>                </div>
+<button type="button" class="btn btn-primary continuar5" data-toggle="modal" data-target="#exampleModalTarjeta" id="gg">Continuar</button>                </div>
             </div>
             <div class="card">
                 <div class="card-header bg-dark text-white">
